# 3d_ant_analysis

./: README.md  _config.yml  ant_3d.csv  ant_3d_validrows.csv  environment.yml  pyproject.toml  skeleton.toml  test_99_all_kp.csv  test_box.ipynb  test_shape_to_transform.ipynb
scripts/: analysis.py  anti_correlation_antenna.ipynb  collision_3d_plot.ipynb  collision_3d_plot.py  collision_acceleration_all_session.py  collision_acceleration_comparison.ipynb  collision_displace_all_session.ipynb  collision_displacement_frame.ipynb  collision_velocity_all_session.ipynb  collision_velocity_all_session.py  collision_velocity_frame.ipynb  fourier_analysis.ipynb  ground_collision_plot.ipynb  ground_contacts.py  normalised_duration.ipynb  proportion_both_antennae.py  size_to_duration.py  time_position_plot.py  time_velocity_plot.py
segmentation/: 240905-1616_seed_session28_frame1001.dae  240905-1616_seed_session28_frame1003.dae  240905-1616_seed_session28_frame1004.dae  240905-1616_seed_session28_frame1005.dae  240905-1616_seed_session28_frame1006.dae  240905-1616_seed_session28_frame1008.dae  240905-1616_seed_session28_frame1013.dae  240905-1616_seed_session28_frame1014.dae  240905-1616_seed_session28_frame1016.dae  240905-1616_seed_session28_frame1020.dae  240905-1616_seed_session28_frame1023.dae  240905-1616_seed_session28_frame1024.dae  240905-1616_seed_session28_frame1025.dae  240905-1616_seed_session28_frame1028.dae  240905-1616_seed_session28_frame1030.dae  240905-1616_seed_session28_frame564.dae  240905-1616_seed_session28_frame565.dae  (+243 more)
src/: animal.py  collision.py  (+6 more)
(+217 files in other folders)
